--- a/index.html
+++ b/index.html
@@ -110,17 +110,17 @@
       padding: 0;
       list-style: none;
     }
-    .activity-item {
+    .activity-item-nyc {
       background: rgba(255, 255, 255, 0.9);
       border-radius: 10px;
       overflow: hidden;
       cursor: pointer;
       transition: transform 0.3s ease, opacity 0.3s ease;
     }
-    .activity-item:hover {
+    .activity-item-nyc:hover {
       transform: scale(1.02);
     }
-    .activity-item img {
+    .activity-item-nyc img {
       width: 100%;
       display: block;
     }
@@ -147,6 +147,8 @@
         transform: translateY(0);
       }
     }
+
+
     /* Activity adder styles */
     .activity-adder {
       margin: 20px auto;
@@ -205,6 +207,17 @@
       margin-bottom: 20px;
   }
 
+  .activity-description-nyc {
+    color: white;
+    padding: 15px;
+    text-align: left;
+  }
+
+  .activity-item:hover .activity-description-nyc {
+      color: black;
+    }
+    
+
   .activity-item {
       display: flex;
       align-items: center;
@@ -215,10 +228,14 @@
       margin-bottom: 10px;
       cursor: pointer;
       transition: background 0.3s ease-in-out;
+
     }
     .activity-item:hover {
       background: #f5f5f5;
+
     }
+
+   
     .activity-item img {
       width: 80px;
       height: 80px;
@@ -310,7 +327,7 @@
     <!-- Activities Grid -->
     <ul id="activities-grid">
       <!-- The MET -->
-      <li class="activity-item fade-in" onclick="toggleCompleted(this)">
+      <li class="activity-item-nyc fade-in" onclick="toggleCompleted(this)">
         <img src="images/g8.png" alt="The MET" />
         <div class="activity-description">
           <h3>The MET</h3>
@@ -318,7 +335,7 @@
         </div>
       </li>
       <!-- Omakase -->
-      <li class="activity-item fade-in" onclick="toggleCompleted(this)">
+      <li class="activity-item-nyc fade-in" onclick="toggleCompleted(this)">
         <img src="images/g9.png" alt="Omakase Dining" />
         <div class="activity-description">
           <h3>Omakase</h3>
@@ -326,7 +343,7 @@
         </div>
       </li>
       <!-- Ride Through the Sunset -->
-      <li class="activity-item fade-in" onclick="toggleCompleted(this)">
+      <li class="activity-item-nyc fade-in" onclick="toggleCompleted(this)">
         <img src="images/g10.png" alt="Sunset Ride" />
         <div class="activity-description">
           <h3>Ride Through the Sunset</h3>
@@ -334,7 +351,7 @@
         </div>
       </li>
       <!-- Catch the Sunrise -->
-      <li class="activity-item fade-in" onclick="toggleCompleted(this)">
+      <li class="activity-item-nyc fade-in" onclick="toggleCompleted(this)">
         <img src="images/g11.png" alt="Sunrise Catch" />
         <div class="activity-description">
           <h3>Catch the Sunrise</h3>
@@ -576,7 +593,7 @@
         // Fill in content
         listItem.innerHTML = `
           <img src="${memory.preview}" alt="${memory.title}" />
-          <div class="activity-description">
+          <div class="activity-description-nyc">
             <h3>${memory.title}</h3>
             <p>${memory.description}</p>
           </div>
@@ -608,37 +625,6 @@
     // Load the memories on page load
     displayMemories();
 
-    //  // List of images
-    //  const images = [
-    //         "new_york_2.JPG", "new_york_3.JPG", "new_york_4.JPG", "new_york_5.JPG", "new_york_6.JPG", 
-    //         "new_york_7.JPG", "new_york_8.JPG", "new_york_9.JPG", "new_york_10.JPG", "new_york.JPG",
-    //         "san_antonio_2.JPG", "san_antonio_3.JPG", "san_antonio_4.JPG", "san_antonio_5.JPG", "san_antonio_6.JPG", "san_antonio.JPG",
-    //         "visit_mit_1.JPG", "visit_mit_2.JPG", "visit_mit_3.JPG", "visit_mit_4.JPG", "visit_mit_5.JPG", "visit_mit_6.JPG", "visit_mit.JPG"
-    //     ];
-
-    //     // Function to categorize and display images
-    //     function displayImages() {
-    //         const newYorkGallery = document.getElementById("new-york-gallery");
-    //         const sanAntonioGallery = document.getElementById("san-antonio-gallery");
-    //         const visitMitGallery = document.getElementById("visit-mit-gallery");
-
-    //         images.forEach(image => {
-    //             const imgElement = document.createElement("img");
-    //             imgElement.src = `images_together/${image}`; // Change this to your actual path
-    //             imgElement.alt = image;
-
-    //             if (image.startsWith("new_york")) {
-    //                 newYorkGallery.appendChild(imgElement);
-    //             } else if (image.startsWith("san_antonio")) {
-    //                 sanAntonioGallery.appendChild(imgElement);
-    //             } else if (image.startsWith("visit_mit")) {
-    //                 visitMitGallery.appendChild(imgElement);
-    //             }
-    //         });
-    //     }
-
-    //     // Call function to display images
-    //     displayImages();
   </script>
 </body>
 </html>
