--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
     <ul id="activities-grid">
       <!-- The MET -->
       <li class="activity-item-nyc fade-in" onclick="toggleCompleted(this)">
-        <img src="images/g8.png" alt="The MET" />
+        <img src="images/met.png" alt="The MET" />
         <div class="activity-description-nyc">
           <h3>The MET</h3>
           <p>This is where the fun begins. This is where we will see the beautiful art that displays - something that you always wanted! </p>
@@ -337,7 +337,7 @@
       </li>
       <!-- Omakase -->
       <li class="activity-item-nyc fade-in" onclick="toggleCompleted(this)">
-        <img src="images/g9.png" alt="Omakase Dining" />
+        <img src="images/om.png" alt="Omakase Dining" />
         <div class="activity-description-nyc">
           <h3>Omakase</h3>
           <p>A sushi experience only made for us!</p>
@@ -345,7 +345,7 @@
       </li>
       <!-- Ride Through the Sunset -->
       <li class="activity-item-nyc fade-in" onclick="toggleCompleted(this)">
-        <img src="images/g10.png" alt="Sunset Ride" />
+        <img src="images/sunset.png" alt="Sunset Ride" />
         <div class="activity-description-nyc">
           <h3>Ride Through the Sunset</h3>
           <p>Watching the mesmerizing sunset together!</p>
@@ -353,7 +353,7 @@
       </li>
       <!-- Catch the Sunrise -->
       <li class="activity-item-nyc fade-in" onclick="toggleCompleted(this)">
-        <img src="images/g11.png" alt="Sunrise Catch" />
+        <img src="images/sunrise.png" alt="Sunrise Catch" />
         <div class="activity-description-nyc">
           <h3>Catch the Sunrise</h3>
           <p>Waking up early? Can we do that? To see the beautiful sunrise? I guess we will see.</p>
